--- a/docs/modules/reference/pages/performance-data-collection/collectors/xml.adoc
+++ b/docs/modules/reference/pages/performance-data-collection/collectors/xml.adoc
@@ -57,7 +57,7 @@ If the root element is an array, it will be wrapped in an object accessible as `
 
 Understanding <<operation:deep-dive/performance-data-collection/resource-types.adoc#resource-types, resource types>> helps when editing collector-specific configuration files.
 
-XML Collections are defined in `$\{OPENNMS_HOME}/etc/xml-datacollection-config.xml` and groups are defined in `$\{OPENNMS_HOME}/etc/xml-datacollection/`.
+XML collections are defined in `$\{OPENNMS_HOME}/etc/xml-datacollection-config.xml` and groups are defined in `$\{OPENNMS_HOME}/etc/xml-datacollection/`.
 
 .Sample collection definition named `xml-opennms-nodes`
 [source, xml]
@@ -88,7 +88,7 @@ The `url` attribute of the `<xml-source>` supports node and IpInterface <<refere
 </xml-groups>
 ----
 
-=== Customizing the source request
+=== Customize the source request
 
 If you need to customize the request to pull raw data, you can add a `<request>` element within the `<xml-source>` block.
 
@@ -149,7 +149,7 @@ If the endpoint being collected requires additional headers, you can add them as
   </xml-source>
 ----
 
-=== Retrieving data from a POST request
+=== Retrieve data from a POST request
 
 If your XML data needs to be retrieved via a POST instead of a GET, you can specify the body content of the request.
 
