NMS-15491: Official documentation describes how to uninstall and block "datachoices" feature
NMS-15491: updated documentation to add procedures for blocking and uninstalling usage statistics collection

NMS-15490: Docs explicitly state that statistics sharing consent is assumed and how to revoke it - updated to add explicit statement that we assume consent. Updated existing link to how to enable/disable statistics collection

NMS-15631: Update UI instructions and screenshots - updated instructions for usage statistics. No screenshots in the docs, no need to update.

--- a/docs/modules/reference/pages/daemons/daemon-config-files/enlinkd.adoc
+++ b/docs/modules/reference/pages/daemons/daemon-config-files/enlinkd.adoc
@@ -155,7 +155,7 @@ Restart enlinkd or {page-component-title} to apply configuration changes.
 | false
 |===
 
-WARNING: Specifying "false" with a `use-{protocol}-discovery` attribute deletes persisted protocol data.
+WARNING: Specifying "false" with a `use-\{protocol}-discovery` attribute deletes persisted protocol data.
 
 The first run of the bridge discovery process is scheduled for `initial_sleep_time + bridge_topology_interval`.
 The first run of the updaters is scheduled for `0L`.
