--- a/docs/modules/operation/pages/deep-dive/flows/sentinel/message-broker/kafka.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/sentinel/message-broker/kafka.adoc
@@ -29,8 +29,9 @@ config:property-set http-url http://core-instance-ip:8980/opennms<3>
 config:update
 ----
 
-<1> A location string is used to assign the Sentinel to a monitoring location with Minions.
-<2> Unique identifier used as a node label for monitoring the Sentinel instance within {page-component-title).
+<1> A location string is used to assign the Sentinel to a monitoring location in your environment with Minions.
+<2> Unique identifier used as a node label for monitoring the Sentinel instance within {page-component-title}.
+<3> URL that points to your core {page-component-title} instance.
 
 .Configure Sentinel as Kafka consumer for flow messages
 [source, karaf]
