--- a/docs/modules/deployment/pages/core/getting-started.adoc
+++ b/docs/modules/deployment/pages/core/getting-started.adoc
@@ -195,6 +195,7 @@ Nodes with this service have JMX-based data collection performed on Java JVM sta
 
 == Related topics
 
+* xref:operation:deep-dive/admin/configuration/startup.adoc[]
 * xref:reference:configuration/selinux.adoc[]
 * xref:reference:configuration/receive-snmp-traps.adoc[]
 * xref:reference:configuration/install-jdbc-driver.adoc[]
