--- a/docs/modules/operation/pages/deep-dive/flows/sentinel/message-broker/kafka.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/sentinel/message-broker/kafka.adoc
@@ -29,7 +29,7 @@ config:property-set http-url http://core-instance-ip:8980/opennms<3>
 config:update
 ----
 
-<1> A location string is used to assign the Sentinel to a monitoring location in your environment with Minions.
+<1> A location string is used to assign the Sentinel to a monitoring location in your environment that has Minions.
 <2> Unique identifier used as a node label for monitoring the Sentinel instance within {page-component-title}.
 <3> URL that points to your core {page-component-title} instance.
 
