--- a/docs/modules/operation/pages/deep-dive/flows/sentinel/message-broker/activemq.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/sentinel/message-broker/activemq.adoc
@@ -25,23 +25,20 @@ ssh -p 8301 admin@localhost
 config:edit org.opennms.sentinel.controller
 config:property-set location SENTINEL<1>
 config:property-set id 00000000-0000-0000-0000-000000ddba11<2>
-config:property-set http-url http://core-instance-ip:8980/opennms<3>
-config:property-set broker-url failover:tcp://my-activemq-ip:61616<4>
+config:property-set broker-url failover:tcp://my-activemq-ip:61616<3>
 config:update
 ----
 
-<1> A location string is used to assign the Sentinel to a monitoring location with Minions.
-<2> Unique identifier used as a node label for monitoring the Sentinel instance within {page-component-title).
+<1> A location string is used to assign the Sentinel to a monitoring location. This can be an existing location or a new location and does not impact the messages that this Sentinel will process.
+<2> Unique identifier used as a node label for monitoring the Sentinel instance within {page-component-title}.
 <3> URL that points to ActiveMQ broker.
 
 .Configure the credentials and exit Karaf shell
 [source, karaf]
 ----
-opennms:scv-set opennms.http my-sentinel-user my-sentinel-password<1>
-opennms:scv-set opennms.broker my-sentinel-user my-sentinel-password<2>
+opennms:scv-set opennms.broker my-sentinel-user my-sentinel-password<1>
 ----
-<1> Set the credentials for the REST endpoint created in your {page-component-title} Core instance
-<2> Set the credentials for the ActiveMQ message broker
+<1> Set the credentials for the ActiveMQ message broker
 
 NOTE: The credentials are encrypted on disk in `$\{SENTINEL_HOME}/etc/scv.jce`.
 
@@ -68,7 +65,6 @@ Verifying installed bundles                    [ Success  ]
 Retrieving NodeDao                             [ Success  ]
 Connecting to JMS Broker                       [ Success  ]
 Connecting to ElasticSearch ReST API (Flows)   [ Success  ]
-Connecting to OpenNMS ReST API                 [ Success  ]
 
 => Everything is awesome
 ----
