--- a/docs/modules/operation/pages/deep-dive/flows/sentinel/sentinel.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/sentinel/sentinel.adoc
@@ -5,8 +5,8 @@
 When your flows data collection volume increases to the point that {page-component-title} is too busy processing flows, you can add Sentinel(s) to do the processing instead.
 Sentinel can do the following:
 
-* Persist network flow messages with Sentinel to Elasticsearch
 * Consume flow messages from Minions through a message broker (ActiveMQ or Apache Kafka)
+* Persist network flow messages to Elasticsearch
 * Generate and send events to the {page-component-title} core instance via message broker
 
 .Flow integration with Sentinel
@@ -20,7 +20,7 @@ Make sure you have the following:
 * xref:deployment:sentinel/runtime/install.adoc#install-sentinel[Sentinel installed] on your system
 * PostgreSQL, Elasticsearch, and REST endpoint to {page-component-title} core instance running and reachable from the Sentinel node
 * Message broker (ActiveMQ or Apache Kafka) running and reachable from the Sentinel node
-* Credentials for authentication configured for the REST endpoint in the {page-component-title} core instance, message broker, Elasticsearch, and the PostgreSQL database
+* Credentials for authentication configured for the message broker, Elasticsearch, and the PostgreSQL database
 
 NOTE: You must set configuration in the `etc` directory relative to the {page-component-title} Sentinel home directory.
       Depending on your operating system, the home directory is `/usr/share/sentinel` for Debian/Ubuntu or `/opt/sentinel` for CentOS/RHEL.
@@ -75,6 +75,8 @@ config:update
 In production you should have at least 1.
 <4> Timeout, in milliseconds, Sentinel waits to connect to the Elasticsearch cluster.
 <5> Read timeout when data is fetched from the Elasticsearch cluster.
+
+Additional configuration properties are documented in <<deep-dive/elasticsearch/introduction.adoc#ga-elasticsearch-integration-configuration, General Elasticsearch configuration>>. Be sure to set the `indexPrefix` property when using a single Elasticsearch cluster with multiple {page-component-title} instances.
 
 == Set up message broker
 
