--- a/docs/modules/operation/pages/deep-dive/flows/sentinel/sflow.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/sentinel/sflow.adoc
@@ -1,20 +1,20 @@
 [source, karaf]
 ----
-config:edit --alias sflow --factory org.opennms.features.telemetry.listeners
+config:edit --alias sflow --factory org.opennms.features.telemetry.adapters
 config:property-set name SFlow<1>
 config:property-set adapters.0.name SFlow-Adapter<2>
 config:property-set adapters.0.class-name org.opennms.netmgt.telemetry.protocols.sflow.adapter.SFlowAdapter<3>
 config:update
 ----
 
-<1> Queue name from which Sentinel will fetch messages.
-By default for {page-component-title} components, the queue name convention is `SFlow`.
+<1> Queue name from which Sentinel will fetch messages. The Minion parser name for sFlow must match this name.
+By default, for {page-component-title} components, the queue name convention is `SFlow`.
 <2> Set a name for the sFlow adapter.
 <3> Assign an adapter to enrich sFlow messages.
 
 The configuration is persisted with the suffix specified as alias in `etc/org.opennms.features.telemetry.adapters-sflow.cfg`.
 
-TIP: To process multiple protocols, increase the index `0` in the adapters name and class name accordingly for additional protocols.
+TIP: When processing multiple protocols from the same queue, include additional adapters by adding additional `name` and `class-name` properties, increasing the index `0` for each pair.
 
 .Run health-check to verify adapter configuration
 [source, karaf]
