--- a/docs/modules/operation/pages/deep-dive/flows/sentinel/message-broker/kafka.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/sentinel/message-broker/kafka.adoc
@@ -49,31 +49,26 @@ config:update
 ----
 config:edit org.opennms.core.ipc.sink.kafka.consumer<1>
 config:property-set bootstrap.servers my-kafka-ip-1:9092,my-kafka-ip-2:9092<2>
+config:property-set group.id OpenNMS<3>
 config:update
 ----
 
 <1> Edit the configuration for the flow consumer from Kafka.
 <2> Connect to the following Kafka nodes and adjust the IPs or FQDNs with the Kafka port (9092) accordingly.
+<3> (Optional) Use the same value used for `org.opennms.instance.id` in file `etc/custom.system.properties` as the value of `group.id` when using the same Kafka cluster for multiple {page-component-title} instances.
 
-The configuration properties required depends on your Kafka deployment.
-It will likely be similar to the configuration used by {page-component-title} Core.
+TIP: The complete set of configuration properties needed for your cluster depends on your Kafka deployment.
+Refer to the configuration used for Kafka by {page-component-title} Core and Minion(s) as the properties required for those components will likely be similar to the properties needed in Sentinel's configuration.
 
-.Configure Sentinel to generate and send events
+
+.Configure Sentinel to generate and send events (sink) using the same set of properties used in the previous step
 [source, karaf]
 ----
-config:edit org.opennms.core.ipc.sink.kafka<1>
-config:property-set bootstrap.servers my-kafka-ip-1:9092,my-kafka-ip-2:9092<2>
+config:edit org.opennms.core.ipc.sink.kafka
+config:property-set bootstrap.servers my-kafka-ip-1:9092,my-kafka-ip-2:9092
+config:property-set group.id OpenNMS
 config:update
 ----
-
-<1> Edit the configuration to send generated events from Sentinel via Kafka.
-<2> Connect to the following Kafka nodes and adjust the IPs or FQDNs with the Kafka port (9092) accordingly.
-
-The configuration properties required depends on your Kafka deployment.
-It will likely be similar to the configuration used by {page-component-title} Core.
-
-TIP: To use a Kafka cluster with multiple {page-component-title} instances, customize the topic prefix by setting `group.id`, which is by default set to `OpenNMS`.
-     You can set a different topic prefix for each instance with `config:edit group.id my-group-id` for the consumer and sink.
 
 Exit the Karaf Shell with kbd:[Ctrl+d]
 
