--- a/docs/modules/operation/nav.adoc
+++ b/docs/modules/operation/nav.adoc
@@ -119,6 +119,7 @@
 *** xref:deep-dive/notifications/bonus-strategies.adoc[]
 **** xref:deep-dive/notifications/strategies/mattermost.adoc[]
 **** xref:deep-dive/notifications/strategies/slack.adoc[]
+*** xref:deep-dive/notifications/shell.adoc[]
 
 ** xref:deep-dive/bsm/introduction.adoc[]
 *** xref:deep-dive/bsm/business-service-definition.adoc[]
