--- a/docs/modules/development/pages/rest/notifications.adoc
+++ b/docs/modules/development/pages/rest/notifications.adoc
@@ -34,5 +34,5 @@ To acknowledge or unacknowledge a notification, use the `acks` endpoint (see xre
 
 | "/notifications/destination-paths/\{destinationPathName}/trigger"
 | Trigger the destination path's targets and commands with a test notification.
-  Can be used to verify that commands are properly configured and that notifications get sent to the recipients.
+  Use to verify that commands are properly configured and that notifications get sent to the recipients.
 |===
