--- a/docs/modules/reference/pages/service-assurance/monitors/SnmpMonitor.adoc
+++ b/docs/modules/reference/pages/service-assurance/monitors/SnmpMonitor.adoc
@@ -250,7 +250,7 @@ Note that you must include the `monitor` section for each service in your defini
     <parameter key="oid" value=".1.3.6.1.4.1.232.6.2.6.4.0"/><1>
     <parameter key="operator" value="="/><2>
     <parameter key="operand" value="2"/><3>
-    <parameter key="reason-template" value="System fan status is not ok. The state should be ok(${operand}) the observed value is ${observedvalue}. Please check your HP Insight Manager. Syntax: other(1), ok(2), degraded(3), failed(4)"/><4>
+    <parameter key="reason-template" value="System fan status is not ok. The state should be ok(${operand}) the observed value is ${observedValue}. Please check your HP Insight Manager. Syntax: other(1), ok(2), degraded(3), failed(4)"/><4>
 </service>
 
 <monitor service="HP-Insight-Fan-System" class-name="org.opennms.netmgt.poller.monitors.SnmpMonitor" />
