--- a/docs/modules/operation/pages/deep-dive/alarms/alarm-example.adoc
+++ b/docs/modules/operation/pages/deep-dive/alarms/alarm-example.adoc
@@ -1,7 +1,7 @@
 
-== Single alarm tracking problem states
+= Single alarm tracking problem states
 
-An alarm is instantiated on the first occurrence of a `service-down` problem:
+An alarm is generated on the first occurrence of a `service-down` problem:
 
 .`service-down` alarm created
 image::alarms/single_alarm_1.png["Alarm List displaying one alarm of minor severity"]
@@ -11,7 +11,7 @@ Click the number displayed in the *Count* column to display the corresponding ev
 .Alarm displaying service down event
 image::alarms/single_alarm_2.png["Alarm Details page displaying a service down event"]
 
-The alarm is cleared immediately when service is restored, and no alarm is created when the service returns to a normal state:
+The alarm clears immediately when service is restored, and no alarm is created when the service returns to a normal state:
 
 .Alarm cleared
 image::alarms/single_alarm_3.png["Alarm List displaying one cleared alarm and its log message"]
@@ -26,9 +26,9 @@ The alarm's count is updated to reflect the new activity:
 image::alarms/single_alarm_5.png["Alarm List displaying one alarm with a count of 2"]
 
 .List of events
-image::alarms/single_alarm_6.png["Detailed event list page displaying two service down events and one service restored event, all of which are members of the same alarm"]
+image::alarms/single_alarm_6.png["Detailed event list page displaying two service down events and one service restored event, all of which are components of the same alarm"]
 
-The alarm is once again cleared immediately when service is restored:
+The alarm once again clears immediately when service is restored:
 
 .Reduced alarm cleared
 image::alarms/single_alarm_7.png["Alarm List displaying one cleared alarm with a count of 2, and its log message"]
