--- a/docs/modules/operation/pages/deep-dive/alarms/alarm-handling.adoc
+++ b/docs/modules/operation/pages/deep-dive/alarms/alarm-handling.adoc
@@ -1,36 +1,37 @@
 
-== Alarm handling
+= Alarm handling
 
-The following interactions with alarms are possible.
+The following are ways you can interact with alarms.
 
-=== Acknowledgment
+== Acknowledgment
 
 PICTURES MISSING
 
-An alarm can be acknowledged by an user.
-The alarm will be moved out from `Alarm(s) outstanding` into `Alarm(s) acknowledged` view.
-By doing this other OpenNMS users can notice, that someone is aware of this alarm.
+Users can acknowledge alarms.
+The alarm will be moved out from `Alarm(s) outstanding` into the `Alarm(s) acknowledged` view.
+Doing this lets other {page-component-title} users see that someone is aware of the alarm.
 
 NOTE: A manually acknowledged alarm that was cleared automatically by its clear event needs also unacknowledged manually to disappear.
 
-=== Clearing
+== Clearing
 
 PICTURES MISSING
 
-Clearing an oustanding or acknowledged alarm means "mark it as resolved".
+Clearing an outstanding or acknowledged alarm means "mark it as resolved".
 The cleared alarm will disappear within a defined cycle.
 
-NOTE: If the alarm was created by a threshold configuration the alarm will appear again, if the defined metric is still or again matching the threshold configurations.
-An alarm based on a `nodeLostService` event won't appear again. To keep track on those `outage alarms` check the outages list.
+NOTE: Alarms created by a threshold configuration will appear again if the defined metric still matches the threshold configurations or matches it again.
+An alarm based on a `nodeLostService` event won't appear again.
+To keep track of those `outage alarms`, check the outages list.
 
-=== Escalation
+== Escalation
 
 PICTURES MISSING
 
-An alarm always has the same <<deep-dive/events/event-configuration.adoc#severities, severities>> like its underlaying event.
-If an alarm gets escalated, the alarm's <<deep-dive/events/event-configuration.adoc#severities, severity>> gets increased one level.
+An alarm always has the same <<deep-dive/events/event-configuration.adoc#severities, severities>> as its underlaying event.
+If an alarm gets escalated, the alarm's <<deep-dive/events/event-configuration.adoc#severities, severity>> increases one level.
 
-=== Notes
+== Alarm notes
 
 {page-component-title} creates alarms for issues in the network.
 Alarm notes let you assign comments to a specific alarm, or to a whole class of alarms, and share that information with other people on your team.
@@ -46,6 +47,6 @@ Deleting the alarm also deletes any associated sticky memos.
 Journal memos are shown for all alarms that match a specific reduction key.
 Deleting an individual alarm does not remove the journal memo.
 +
-You must click *Clear* on an alarm with an associated journal memo to remove it.
+You must click *Clear* on an alarm with an associated journal memo to remove the memo.
 
-Symbols on the Alarm List Summary and Alarm List Detail pages indicate if individual alarms have sticky or journal memos associated.
+Symbols on the Alarm List Summary and Alarm List Detail pages indicate if individual alarms have associated sticky or journal memos.
