NMS-11063: Document TrivialTimeMonitor

--- a/docs/modules/reference/nav.adoc
+++ b/docs/modules/reference/nav.adoc
@@ -85,6 +85,7 @@
 ** xref:service-assurance/monitors/StrafePingMonitor.adoc[]
 ** xref:service-assurance/monitors/SystemExecuteMonitor.adoc[]
 ** xref:service-assurance/monitors/TcpMonitor.adoc[]
+** xref:service-assurance/monitors/TrivialTimeMonitor.adoc[]
 ** xref:service-assurance/monitors/VmwareCimMonitor.adoc[]
 ** xref:service-assurance/monitors/VmwareMonitor.adoc[]
 ** xref:service-assurance/monitors/WebMonitor.adoc[]
@@ -149,6 +150,7 @@
 *** xref:provisioning/detectors/ReverseDNSLookupDetector.adoc[Reverse DNS]
 *** xref:provisioning/detectors/SnmpDetector.adoc[SNMP]
 *** xref:provisioning/detectors/TcpDetector.adoc[TCP]
+*** xref:provisioning/detectors/TrivialTimeMonitor.adoc[]
 *** xref:provisioning/detectors/WebDetector.adoc[Web]
 *** xref:provisioning/detectors/Win32ServiceDetector.adoc[Win32 Service]
 *** xref:provisioning/detectors/WmiDetector.adoc[WMI]
