NMS:15584: fix alarm into link

--- a/docs/modules/operation/pages/deep-dive/alarms/configuring-alarms.adoc
+++ b/docs/modules/operation/pages/deep-dive/alarms/configuring-alarms.adoc
@@ -1,4 +1,4 @@
-
+[[ga-configure-alarms]]
 = Configure Alarms
 
 Because alarmd instantiates alarms from events, defining alarms in {page-component-title} involves defining an additional event XML element that indicates a problem or resolution in the network.
