--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+opennms (31.0.9-1) stable; urgency=medium
+
+  * Minor release containing several bug fixes and enhancements.
+
+    For details on what has changed, see:
+    https://docs.opennms.com/horizon/31.0.9/index.html
+
+ -- OpenNMS Release Manager <opennms@opennms.org>  Tue, 13 Jun 2023 14:13:39 -0400
+
 opennms (31.0.8-1) stable; urgency=medium
 
   * Minor release containing several small bug fixes and enhancements.
